manifest/objects/Apttus_Approval__ApprovalsCustomConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds global defaults for context objects processed by the approval engine</description>
    <fields>
        <fullName>Apttus_Approval__ApprovalContextType__c</fullName>
        <defaultValue>&quot;Single&quot;</defaultValue>
        <description>The approval context type associated with the process for the object

Valid Values are:
=============
Single
Multiple</description>
        <inlineHelpText>The approval context type associated with the process for the object

Valid Values are:
=============
Single
Multiple</inlineHelpText>
        <label>Approval Context Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalGroupStatusField__c</fullName>
        <description>The API name of the approval group status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Group_Status__c&quot;.</description>
        <inlineHelpText>The API name of the approval group status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Group_Status__c&quot;.</inlineHelpText>
        <label>Approval Group Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalStatusField__c</fullName>
        <description>The API name of the approval status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Status__c&quot;.</description>
        <inlineHelpText>The API name of the approval status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Status__c&quot;.</inlineHelpText>
        <label>Approval Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalSummaryPage__c</fullName>
        <description>The name of the approval summary page. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the approval summary page. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Approval Summary Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssignmentEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is submitted. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is submitted. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Assignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AsyncApproveEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an asynchronous approval action has completed. This will be the global default for context objects of this type and cannot be overridden.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an asynchronous approval action has completed. This will be the global default for context objects of this type and cannot be overridden.</inlineHelpText>
        <label>Async Approve Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AsyncCancelEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an asynchronous cancel action has completed. This will be the global default for context objects of this type and cannot be overridden.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an asynchronous cancel action has completed. This will be the global default for context objects of this type and cannot be overridden.</inlineHelpText>
        <label>Async Cancel Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AsyncErrorEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an asynchronous action error has occurred. This will be the global default for context objects of this type and cannot be overridden.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an asynchronous action error has occurred. This will be the global default for context objects of this type and cannot be overridden.</inlineHelpText>
        <label>Async Error Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AsyncPreviewEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an asynchronous preview action has completed. This will be the global default for context objects of this type and cannot be overridden.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an asynchronous preview action has completed. This will be the global default for context objects of this type and cannot be overridden.</inlineHelpText>
        <label>Async Preview Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AsyncRejectEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an asynchronous rejection action has completed. This will be the global default for context objects of this type and cannot be overridden.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an asynchronous rejection action has completed. This will be the global default for context objects of this type and cannot be overridden.</inlineHelpText>
        <label>Async Reject Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AsyncSubmitEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an asynchronous submit action has completed. This will be the global default for context objects of this type and cannot be overridden.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an asynchronous submit action has completed. This will be the global default for context objects of this type and cannot be overridden.</inlineHelpText>
        <label>Async Submit Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BackupAdminUser__c</fullName>
        <description>The name of backup administrator or leave blank to use the global default.</description>
        <inlineHelpText>The name of backup administrator or leave blank to use the global default.</inlineHelpText>
        <label>Backup Admin User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CancellationEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is cancelled. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is cancelled. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Cancellation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectTypes2__c</fullName>
        <description>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</description>
        <inlineHelpText>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</inlineHelpText>
        <label>Child Object Types2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectTypes__c</fullName>
        <description>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</description>
        <inlineHelpText>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</inlineHelpText>
        <label>Child Object Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EnableAdhocApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Adhoc Approval is enabled for this object.</description>
        <inlineHelpText>Indicates whether Adhoc Approval is enabled for this object.</inlineHelpText>
        <label>Enable Adhoc Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalationEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is escalated. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is escalated. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Escalation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IncludeChildObjAttachmentsForSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not to include attachments associated with the current context object&apos;s children in the attachment selection screen when submitting for approval.</description>
        <inlineHelpText>Indicates whether or not to include attachments associated with the current context object&apos;s children in the attachment selection screen when submitting for approval.</inlineHelpText>
        <label>Include Child Obj Attachments For Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__MyApprovalsPage__c</fullName>
        <description>Name of the My Approvals page used for showing consolidated approval requests</description>
        <inlineHelpText>Name of the My Approvals page used for showing consolidated approval requests</inlineHelpText>
        <label>My Approvals Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__NotifyOnlyEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when a notify only process step is executed. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when a notify only process step is executed. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>NotifyOnly Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ParentReferenceField__c</fullName>
        <description>Parent object reference</description>
        <inlineHelpText>Parent object reference</inlineHelpText>
        <label>Parent Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__PreviewPage__c</fullName>
        <description>Name of the Preview page used for showing consolidated approval requests preview</description>
        <inlineHelpText>Name of the Preview page used for showing consolidated approval requests preview</inlineHelpText>
        <label>Preview Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReassignmentEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is reassigned. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is reassigned. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Reassignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReminderEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request needs a reminder.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request needs a reminder.</inlineHelpText>
        <label>Reminder Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ShowAllDocumentVersionDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this setting shows all agreement versions from the document version details related list.  When unchecked (default) it only shows the most recent version from the document versions related list.</description>
        <inlineHelpText>When checked, this setting shows all agreement versions from the document version details related list.  When unchecked (default) it only shows the most recent version from the document versions related list.</inlineHelpText>
        <label>Show All Document Version Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__UseFilesInsteadOfNotesAndAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the approvals engine will query all attachments from Files instead of Notes&amp;Attachment</description>
        <inlineHelpText>If checked the approvals engine will query all attachments from Files instead of Notes&amp;Attachment</inlineHelpText>
        <label>Use Files Instead of Notes &amp; Attachments</label>
        <type>Checkbox</type>
    </fields>
    <label>Approvals Custom Config</label>
</CustomObject>